Fixed bug so home screen can scroll to bottom on mobile.

--- a/frontend/src/App/styles/screens/_projects.scss
+++ b/frontend/src/App/styles/screens/_projects.scss
@@ -5,6 +5,10 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 10rem 1fr;
 
+  @media (max-width: 950px) {
+    height: 100%;
+  }
+
   &__card {
     @include flexCenterCenter();
     @include heightWidth100();
